--- a/index.html
+++ b/index.html
@@ -40,19 +40,24 @@
           <div
             class="d-flex gap-3 align-items-center justify-content-center lato c-white"
           >
-            <div>
-              <i class="fa-regular fa-envelope fs-16"></i
-              ><span class="ms-2 fs-13"><a href="cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="0d6e6263796c6e794d7a647b6c636c236e6260">[email&#160;protected]</a></span>
-            </div>
+            <div style="color: white;">
+  <i class="fa-regular fa-envelope fs-16"></i>
+  <span class="ms-2 fs-13">
+    <a href="mailto:hello@keyremedies.com" style="color: white; text-decoration: none;">
+      hello@keyremedies.com
+    </a>
+  </span>
+</div>
+
             <div>
               <i class="fa-solid fa-phone me-2 fs-16"></i
-              ><span class="fs-13">+1 (555) 123-4567</span>
+              ><span class="fs-13">+1 (606) 366-5113</span>
             </div>
           </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark lato">
           <div class="container-lg d-flex">
-            <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index-2.html">
+            <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index.html">
               <img
                 src="img/keyremedies-logo-dark.png"
                 alt="Brand Logo"
@@ -93,7 +98,7 @@
               <div class="offcanvas-body d-lg-flex justify-content-center">
                 <ul class="navbar-nav gap-3">
                   <li class="nav-item">
-                    <a class="nav-link active" href="index-2.html">Home</a>
+                    <a class="nav-link active" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -1358,7 +1363,7 @@
           <div class="row row-cols-1 row-cols-lg-2 g-3">
             <div class="col">
               <div>
-                <a href="index-2.html">
+                <a href="index.html">
                   <img
                     src="img/keyremedies-logo-dark.png"
                     alt="Key Remedies logo"
@@ -1487,7 +1492,7 @@
               </h3>
               <ul class="footer-links">
                 <li>
-                  <a href="index-2.html" class="text-silver footer-link">Home</a>
+                  <a href="index.html" class="text-silver footer-link">Home</a>
                 </li>
                 <li>
                   <a href="about.html" class="text-silver footer-link">About</a>
@@ -1516,12 +1521,12 @@
               </h3>
               <ul class="footer-links">
                 <li>
-                  <a href="index-2.html" class="text-silver footer-link"
+                  <a href="index.html" class="text-silver footer-link"
                     >Documentation</a
                   >
                 </li>
                 <li>
-                  <a href="index-2.html" class="text-silver footer-link"
+                  <a href="index.html" class="text-silver footer-link"
                     >Privacy</a
                   >
                 </li>
@@ -1541,7 +1546,7 @@
                   >
                 </li>
                 <li>
-                  <a href="index-2.html" class="text-silver footer-link"
+                  <a href="index.html" class="text-silver footer-link"
                     >Cookies</a
                   >
                 </li>
