--- a/testimonials.html
+++ b/testimonials.html
@@ -36,19 +36,24 @@
         <div
           class="d-flex gap-3 align-items-center justify-content-center lato c-white"
         >
-          <div>
-            <i class="fa-regular fa-envelope fs-16"></i
-            ><span class="ms-2 fs-13"><a href="cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="573438392336342317203e213639367934383a">[email&#160;protected]</a></span>
-          </div>
+          <div style="color: white;">
+  <i class="fa-regular fa-envelope fs-16"></i>
+  <span class="ms-2 fs-13">
+    <a href="mailto:hello@keyremedies.com" style="color: white; text-decoration: none;">
+      hello@keyremedies.com
+    </a>
+  </span>
+</div>
+
           <div>
             <i class="fa-solid fa-phone me-2 fs-16"></i
-            ><span class="fs-13">+1 (555) 123-4567</span>
+            ><span class="fs-13">+1 (606) 366-5113</span>
           </div>
         </div>
       </div>
       <nav class="navbar navbar-expand-lg navbar-dark lato">
         <div class="container-lg d-flex">
-          <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index-2.html">
+          <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index.html">
             <img
               src="img/keyremedies-logo-dark.png"
               alt="Brand Logo"
@@ -89,7 +94,7 @@
             <div class="offcanvas-body d-lg-flex justify-content-center">
               <ul class="navbar-nav gap-3">
                 <li class="nav-item">
-                  <a class="nav-link" href="index-2.html">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About</a>
@@ -671,7 +676,7 @@
           <div class="row row-cols-1 row-cols-lg-2 g-3">
             <div class="col">
               <div>
-                <a href="index-2.html">
+                <a href="index.html">
                   <img
                     src="img/keyremedies-logo-dark.png"
                     alt="Key Remedies logo"
@@ -800,7 +805,7 @@
               </h3>
               <ul class="footer-links">
                 <li>
-                  <a href="index-2.html" class="text-silver footer-link">Home</a>
+                  <a href="index.html" class="text-silver footer-link">Home</a>
                 </li>
                 <li>
                   <a href="about.html" class="text-silver footer-link">About</a>
@@ -829,12 +834,12 @@
               </h3>
               <ul class="footer-links">
                 <li>
-                  <a href="index-2.html" class="text-silver footer-link"
+                  <a href="index.html" class="text-silver footer-link"
                     >Documentation</a
                   >
                 </li>
                 <li>
-                  <a href="index-2.html" class="text-silver footer-link"
+                  <a href="index.html" class="text-silver footer-link"
                     >Privacy</a
                   >
                 </li>
@@ -854,7 +859,7 @@
                   >
                 </li>
                 <li>
-                  <a href="index-2.html" class="text-silver footer-link"
+                  <a href="index.html" class="text-silver footer-link"
                     >Cookies</a
                   >
                 </li>
