--- a/index.html
+++ b/index.html
@@ -361,46 +361,40 @@
                 <div class="title-about c-semi-black mt-4">
                   Sanctuary for Ayurvedic Healing and Wellness
                 </div>
-              </div>
-              <span class="text-grey"
-                >At Key Remedies, we embrace authentic Ayurveda to nurture holistic
-                wellness, empowering you to find balance and rejuvenation in
-                life</span
-              >
-              <div class="d-block d-lg-flex">
-                <div class="d-flex align-items-center my-3">
-                  <span class="icon-circle-37-main me-3"
-                    ><i class="fa-solid fa-check"></i
-                  ></span>
+                <span class="text-grey">
+                  At Key Remedies, we embrace authentic Ayurveda to nurture holistic wellness, empowering you to find balance and rejuvenation in life.
+                </span>
+                <div class="d-block d-lg-flex">
+                  <div class="d-flex align-items-center my-3">
+                    <span class="icon-circle-37-main me-3"
+                      ><i class="fa-solid fa-check"></i
+                    ></span>
+                  </div>
+                  <div>
+                    <span class="text-subtitle c-semi-black my-4">
+                      Ayurvedic Expertise
+                    </span>
+                    <br />
+                    <p class="text-grey my-3">
+                      Our team of certified Ayurvedic practitioners brings years of experience in natural healing. We specialize in diagnosing your unique dosha and crafting personalized therapies that address the root cause of health concerns, not just the symptoms.
+                    </p>
+                  </div>
                 </div>
-                <div>
-                  <span class="text-subtitle c-semi-black my-4"
-                    >Ayurvedic Exspanertise</span
-                  >
-                  <br />
-                  <p class="text-grey my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
-                    elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus
-                    leo.
-                  </p>
-                </div>
-              </div>
-              <div class="dblock d-lg-flex">
-                <div class="d-flex align-items-center my-3">
-                  <span class="icon-circle-37-main me-3"
-                    ><i class="fa-solid fa-check"></i
-                  ></span>
-                </div>
-                <div>
-                  <span class="text-subtitle c-semi-black my-4"
-                    >Ayurvedic Exspanertise</span
-                  >
-                  <br />
-                  <p class="text-grey my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
-                    elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus
-                    leo.
-                  </p>
+                <div class="dblock d-lg-flex">
+                  <div class="d-flex align-items-center my-3">
+                    <span class="icon-circle-37-main me-3"
+                      ><i class="fa-solid fa-check"></i
+                    ></span>
+                  </div>
+                  <div>
+                    <span class="text-subtitle c-semi-black my-4">
+                      Holistic Wellness Approach
+                    </span>
+                    <br />
+                    <p class="text-grey my-3">
+                      At Key Remedies, we blend traditional Ayurvedic therapies with modern wellness practices. Our holistic approach supports your mind, body, and spirit—helping you achieve lasting vitality, stress relief, and natural balance for a healthier, happier life.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -535,10 +529,9 @@
                   alt="choose"
                 />
               </div>
-              <p class="text-subtitle c-white mt-3">Authentic Ayurveda</p>
+              <p class="text-subtitle c-white mt-3">Targeted Disease Treatment</p>
               <p class="text-white text-center m-0 mb-lg-4">
-                Experience genuine Ayurvedic treatments rooted in centuries of
-                tradition
+                Specialized Ayurvedic protocols for chronic conditions like kidney disease, diabetes, and men’s health.
               </p>
             </div>
             <div
@@ -552,10 +545,9 @@
                   alt="choose"
                 />
               </div>
-              <p class="text-subtitle c-white mt-3">Natural Healing Methods</p>
+              <p class="text-subtitle c-white mt-3">Natural & Safe Remedies</p>
               <p class="text-white text-center m-0 mb-lg-4">
-                We use only natural, herbal remedies and traditional Ayurvedic
-                techniques
+                We use only natural, herbal medicines and therapies with no harmful side effects.
               </p>
             </div>
             <div
@@ -569,10 +561,9 @@
                   alt="choose"
                 />
               </div>
-              <p class="text-subtitle c-white mt-3">Expert Practitioners</p>
+              <p class="text-subtitle c-white mt-3">Confidential Consultations</p>
               <p class="text-white text-center m-0 mb-lg-4">
-                Our services blend therapeutic treatments with lifestyle
-                guidance
+                Private, judgment-free care for sensitive health concerns.
               </p>
             </div>
             <div
@@ -629,41 +620,6 @@
         </div>
       </div>
       <div class="width-base partner-margin fade-in">
-        <p class="text-silver text-center">
-          Trusted by Leading Brands – Delivering Wellness Excellence Through
-          Proven Partnerships
-        </p>
-        <div class="swiper-container mt-5">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img src="img/logo-1.png" alt="Logo 1" />
-            </div>
-            <div class="swiper-slide">
-              <img src="img/logo-2.png" alt="Logo 2" />
-            </div>
-            <div class="swiper-slide">
-              <img src="img/logo-3.png" alt="Logo 3" />
-            </div>
-            <div class="swiper-slide">
-              <img src="img/logo-4.png" alt="Logo 4" />
-            </div>
-            <div class="swiper-slide">
-              <img src="img/logo-5.png" alt="Logo 5" />
-            </div>
-            <div class="swiper-slide">
-              <img src="img/logo-6.png" alt="Logo 6" />
-            </div>
-            <div class="swiper-slide">
-              <img src="img/logo-7.png" alt="Logo 7" />
-            </div>
-            <div class="swiper-slide">
-              <img src="img/logo-8.png" alt="Logo 8" />
-            </div>
-            <div class="swiper-slide">
-              <img src="img/logo-9.png" alt="Logo 9" />
-            </div>
-          </div>
-        </div>
       </div>
     </div>
     <!-- Why Choose Us End -->
