--- a/index.html
+++ b/index.html
@@ -1436,9 +1436,11 @@
               <div>
                 <h3 class="text-subtitle c-white my-4">Contact</h3>
                 <div>
-                  <p class="text-silver my-0">+1(234)567890</p>
-                  <p class="text-silver">email : <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="036a6d656c43746a75626d622d606c6e">[email&#160;protected]</a></p>
-                </div>
+  <p class="text-silver my-0">+1(234)567890</p>
+  <p class="text-silver">
+    email : <a href="mailto:info@keyremedies.com" class="text-silver">info@keyremedies.com</a>
+  </p>
+</div>
               </div>
             </div>
             <div class="col-12 col-lg-1"></div>
